# python-interview

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
app/: __main__.py
app/controllers/: facility.py  meters.py
app/services/: meters.py  metrics.py
fixtures/: cache.yaml  output.yaml
tests/: conftest.py  test_app.py
